[package]
name = "nextos"
version = "0.0.0"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/muhammadfiaz/nextos"
homepage = "https://github.com/muhammadfiaz/nextos#readme"
license = "GPL-3"
keywords = ["operating-system", "rust"]


[build-dependencies]

[dependencies]
bootloader = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "nextos"
path = "src/boot.rs"