[package]
name = "nextkernel"
version = "0.0.0"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/muhammad-fiaz/NextKernel"
homepage = "https://github.com/muhammad-fiaz/NextKernel#readme"
license = "GPL-3.0"
keywords = ["operating-system", "kernel", "rust"]

[lib]
name = "nextkernel"
path = "src/boot.rs"
